# krenic

./: Cargo.toml  entitlements.plist  project.hexpat
src/: app.rs  colors.rs  fonts.rs  lib.rs  main.rs  note_name.rs  utils.rs
src/commands/: export.rs  graph.rs  mod.rs  project_updater.rs  region.rs  track.rs
src/commands/graph/: edge.rs  kasl_compilation.rs  kasl_node.rs  mod.rs  node_addition.rs  node_deletion.rs
src/commands/note/: mod.rs  note_addition.rs  note_deletion.rs  note_move.rs
src/commands/region/: mod.rs  region_addition.rs  region_deletion.rs  region_move.rs  regon_addition.rs
src/components/: color_picker.rs  dialog.rs  icon_button.rs  mod.rs  scrolled_panel.rs  text_input.rs  vu_meter.rs
src/core/: frame_process.rs  project_setup.rs
src/core/metadata/: mod.rs  track_meta.rs
src/kasl_node/: error.rs  mod.rs
src/load_write/: audio_ctx_io.rs  error.rs  graph_io.rs  init.rs  load_proj_res.rs  mod.rs  project_io.rs  traits.rs
src/load_write/node_io/: kasl_node.rs  mod.rs
src/load_write/project_meta_io/: graph_meta.rs  mod.rs  node_graph_layout.rs  node_meta.rs  region_meta.rs  track_meta.rs
src/load_write/tempo_map_io/: mod.rs  tempo_event.rs
src/metadata/: graph_meta.rs  mod.rs  node_graph_layout.rs  node_meta.rs  region_meta.rs  track_meta.rs
src/project_io/: graph_io.rs  project_io.rs
src/theme/: colors.rs  mod.rs  text.rs
src/ui/: mod.rs  playhead_calculation.rs
src/ui_state/: code_editor_state.rs  editor_state.rs  mod.rs  node_graph_state.rs  panel_layout.rs  piano_roll_state.rs  timeline_state.rs  toolbar_state.rs
(+105 files in other folders)
