[package]
name = "knodiq"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
eframe = "0.34.0"
egui_extras = { version = "0.34.0", features = ["all_loaders"] }
kasl = { version = "0.2.21", features = ["cranelift"] }
knodiq_engine = { git = "https://github.com/hatya-mouse/knodiq_engine" }
rfd = "0.17.2"
tempfile = "3.27.0"
