[package]
name = "kreniq"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
eframe = "0.34.0"
egui_extras = { version = "0.34.0", features = ["all_loaders"] }
kasl = "0.2.17"
kasl_node = { git = "https://github.com/hatya-mouse/kasl_node" }
kreniq_engine = { git = "https://github.com/hatya-mouse/kreniq_engine" }
tempfile = "3.27.0"
